# storage-contract

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.circleci/: config.yml
schema/: storage-contract.json
schema/raw/: execute.json  query.json  response_to_check_data.json  response_to_query_data.json
scripts/: optimizer-ci.sh  optimizer.sh
src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  utils.rs
